--- a/daddy/project/daddy.vcxproj.filters
+++ b/daddy/project/daddy.vcxproj.filters
@@ -15,6 +15,9 @@
     <ClCompile Include="..\core\dd_escaper.cpp">
       <Filter>core</Filter>
     </ClCompile>
+    <ClCompile Include="..\core\dd_global.cpp">
+      <Filter>core</Filter>
+    </ClCompile>
     <ClCompile Include="..\core\dd_markup.cpp">
       <Filter>core</Filter>
     </ClCompile>
@@ -48,6 +51,9 @@
       <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\core\dd_escaper.hpp">
+      <Filter>core</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\dd_global.hpp">
       <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\core\dd_macro.hpp">
