--- a/daddy/project/daddy.vcxproj.filters
+++ b/daddy/project/daddy.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="..\core\dd_type.cpp">
       <Filter>core</Filter>
     </ClCompile>
+    <ClCompile Include="..\core\dd_handle.cpp">
+      <Filter>core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\core\dd_binary.hpp">
@@ -84,5 +87,8 @@
       <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\daddy.hpp" />
+    <ClInclude Include="..\core\dd_handle.hpp">
+      <Filter>core</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
