--- a/launcher/project/launcher.vcxproj.filters
+++ b/launcher/project/launcher.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="..\source\resource.hpp">
       <Filter>source</Filter>
     </ClInclude>
+    <ClInclude Include="..\source\appview.hpp">
+      <Filter>source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\source\launcher.cpp">
@@ -42,6 +45,9 @@
       <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="..\source\resource.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\appview.cpp">
       <Filter>source</Filter>
     </ClCompile>
   </ItemGroup>
