--- a/logger/project/logger.vcxproj.filters
+++ b/logger/project/logger.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="..\source\boss_config.h">
       <Filter>source</Filter>
     </ClInclude>
+    <ClInclude Include="..\source\boss_gen_assets.hpp">
+      <Filter>source</Filter>
+    </ClInclude>
     <ClInclude Include="..\source\logger.hpp">
       <Filter>source</Filter>
     </ClInclude>
