--- a/daddy/project/daddy.vcxproj
+++ b/daddy/project/daddy.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="..\core\dd_global.cpp" />
     <ClCompile Include="..\core\dd_handle.cpp" />
     <ClCompile Include="..\core\dd_markup.cpp" />
+    <ClCompile Include="..\core\dd_patcher.cpp" />
     <ClCompile Include="..\core\dd_platform.cpp" />
     <ClCompile Include="..\core\dd_string.cpp" />
     <ClCompile Include="..\core\dd_telepath.cpp" />
@@ -190,6 +191,7 @@
     <ClInclude Include="..\core\dd_handle.hpp" />
     <ClInclude Include="..\core\dd_macro.hpp" />
     <ClInclude Include="..\core\dd_markup.hpp" />
+    <ClInclude Include="..\core\dd_patcher.hpp" />
     <ClInclude Include="..\core\dd_platform.hpp" />
     <ClInclude Include="..\core\dd_string.hpp" />
     <ClInclude Include="..\core\dd_telepath.hpp" />
